# src/main/java/com/async/mail/entity/Data.java
@@ -1,0 +1,6 @@
+package com.async.mail.entity;
+
+import java.time.Instant;
+import java.util.UUID;
+
+public record Data(UUID id, String filename, String email, Instant createdAt) {}
