# src/main/java/com/async/mail/repository/model/JData.java
@@ -1,0 +1,34 @@
+package com.async.mail.repository.model;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import java.time.Instant;
+import java.util.UUID;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Entity
+@Getter
+@Setter
+@NoArgsConstructor
+@Table(name = "data")
+public class JData {
+
+  @Id
+  @GeneratedValue(strategy = GenerationType.UUID)
+  private UUID id;
+
+  @Column(length = 100, nullable = false)
+  private String filename;
+
+  @Column(length = 100, nullable = false)
+  private String email;
+
+  @Column(name = "created_at", nullable = false)
+  private Instant createdAt;
+}
